# Heatpump_API

./: .dockerignore  .env.example  .gcloudignore  .gitignore  API_README.md  API_STRUCTURE.md  BUGFIX_DEEP_MERGE.md  BUGFIX_TESPY_COMPATIBILITY.md  BUTTON_FIX_SESSION_STATE.md  CASCADE_FIX.md  CONFIGURATION_UPDATE.md  Dockerfile  Dockerfile.recommended  Dockerfile.streamlit  ENHANCED_FEATURES.md  FIXES_COMPLETE.md  FRESH_INSTALL_GUIDE.md  GCP_DEPLOYMENT_REVIEW.md  INSTALL.md  INTEGRATION_GUIDE.md  MANIFEST.in  MANUAL_BUCKET_VERIFICATION.md  MODEL_CHANGE_CLEAR_FIX.md  MODEL_NAMING.md  NAN_FIX.md  PACKAGE_SETUP_COMPLETE.md  PARTLOAD_IMPLEMENTATION.md  PERMISSION_FIX.md  PHASE1_COMPLETE.md  PHASE1_SUCCESS_SUMMARY.md  README.md  REPORTS_SETUP.md  RESTART_AND_TEST_INSTRUCTIONS.md  STREAMLIT_BUTTON_STATUS.md  check_tespy_chars.py  cloudbuild.recommended.yaml  cloudbuild.yaml  deploy-streamlit.bat  deploy-streamlit.sh  fix_bucket_iam.sh  (+14 more)
.devcontainer/: devcontainer.json
mcp/: MCP_Configuration_Guide.md  MCP_STATUS_AND_SETUP.md  README.md  build-standalone.ps1  heatpump_server.py  install-windows.bat  pyproject.toml  requirements-mcp.txt  simple_test.py  test_mcp_server.py  uninstall-windows.bat
mcp/src/heatpump_mcp/: __init__.py  __main__.py  server.py
src/heatpumps/: __init__.py  currency_utils.py  hp_dashboard.py  simulation.py  streamlit_helpers.py  translate.py  utils_debug.py  variables.py
src/heatpumps/api/: __init__.py  config.py  dependencies.py  main.py  parameter_descriptions.py  schemas.py  workers.py
src/heatpumps/api/routes/: models.py  reports.py  simulate.py  tasks.py
src/heatpumps/api/services/: __init__.py  diagrams.py  storage.py
src/heatpumps/api/templates/: base.html  report.html  report_analysis.html  report_skill.html
src/heatpumps/hp_dashbouard1_files/: favicons(13)  favicons(15)  favicons(19)  favicons(2)  favicons(4)  favicons(5)  favicons(7)  favicons(9)  saved_resource.html
src/heatpumps/models/: HeatPumpBase.py  HeatPumpCascadeBase.py  HeatPumpCascadeEcon.py  HeatPumpCascadeEconIHX.py  HeatPumpCascadeEconIHXTrans.py  HeatPumpCascadeEconTrans.py  HeatPumpCascadeIHXEcon.py  HeatPumpCascadeIHXEconTrans.py  HeatPumpCascadeIHXPC.py  HeatPumpCascadeIHXPCIHX.py  HeatPumpCascadeIHXPCIHXTrans.py  HeatPumpCascadeIHXPCTrans.py  HeatPumpCascadePC.py  HeatPumpCascadePCIHX.py  HeatPumpCascadePCIHXTrans.py  HeatPumpCascadePCTrans.py  HeatPumpEcon.py  HeatPumpEconIHX.py  HeatPumpEconIHXTrans.py  HeatPumpEconTrans.py  HeatPumpIHXEcon.py  HeatPumpIHXEconTrans.py  HeatPumpIHXPC.py  HeatPumpIHXPCIHX.py  HeatPumpIHXPCIHXTrans.py  HeatPumpIHXPCTrans.py  HeatPumpPC.py  HeatPumpPCIHX.py  HeatPumpPCIHXTrans.py  HeatPumpPCTrans.py
src/heatpumps/models/input/: CEPCI.json  currencies.json  params_hp_cascade_econ_closed.json  params_hp_cascade_econ_closed_ihx.json  params_hp_cascade_econ_closed_ihx_trans.json  params_hp_cascade_econ_closed_trans.json  params_hp_cascade_econ_open.json  params_hp_cascade_econ_open_ihx.json  params_hp_cascade_econ_open_ihx_trans.json  params_hp_cascade_econ_open_trans.json  params_hp_cascade_ihx_econ_closed.json  params_hp_cascade_ihx_econ_closed_trans.json  params_hp_cascade_ihx_econ_open.json  params_hp_cascade_ihx_econ_open_trans.json  params_hp_cascade_ihx_pc_econ_closed.json  params_hp_cascade_ihx_pc_econ_closed_ihx.json  params_hp_cascade_ihx_pc_econ_closed_ihx_trans.json  params_hp_cascade_ihx_pc_econ_closed_trans.json  params_hp_cascade_ihx_pc_econ_open.json  params_hp_cascade_ihx_pc_econ_open_ihx.json  params_hp_cascade_ihx_pc_econ_open_ihx_trans.json  params_hp_cascade_ihx_pc_econ_open_trans.json  params_hp_cascade_pc_econ_closed.json  params_hp_cascade_pc_econ_closed_ihx.json  params_hp_cascade_pc_econ_closed_ihx_trans.json  params_hp_cascade_pc_econ_closed_trans.json  params_hp_cascade_pc_econ_open.json  params_hp_cascade_pc_econ_open_ihx.json  (+28 more)
src/heatpumps/old_py_files/: hp_dashboard.py  hp_dashboard_translated.py
src/heatpumps/static/: test.py
tests/: calc_hp_costs.py  calc_sql_hp_costs.py  funny.py  heat_pump.db  heatpump_app.py  heatpump_app_validated.py  hpm_fm.py  hpm_fm_tab.py  import_hp_data.py  init_sql_db.py  manufacturer_data.csv  manufacturer_data_export.csv  validators.py
