[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heatpump-mcp"
version = "1.0.0"
description = "MCP Server for Heat Pump Simulation - enables Claude Desktop to run thermodynamic simulations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rainer Gaier", email = "rainer.gaier@example.com" }
]
keywords = ["mcp", "claude", "heat-pump", "simulation", "thermodynamics", "tespy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/heatpump-mcp"
Documentation = "https://heatpump-api-382432690682.europe-west1.run.app/docs"
Repository = "https://github.com/yourusername/heatpump-mcp"

[project.scripts]
heatpump-mcp = "heatpump_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/heatpump_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
